--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "preproduction": "rm -rf dist",
     "production": "yarn run eslint && webpack --mode production --progress --colors",
-    "start": "webpack-dev-server --mode development --progress --colors --hot --inline --port 8080",
+    "start": "webpack-dev-server --mode development --colors --hot --inline --port 8080",
     "eslint": "eslint webpack.config.js postcss.config.js src/**/*.js --fix"
   },
   "browserslist": [
